<resources>
    <item type="id" name="GlobalLayoutListener" />
    <string name="font_roboto_slab">RobotoSlab-Regular.ttf</string>
    <string name="font_roboto_slab_bold">RobotoSlab-Bold.ttf</string>

    <string name="title_activity_create_lobby">CreateLobbyActivity</string>
    <string name="title_activity_lobby">LobbyActivity</string>
    <string name="title_activity_lobby_create">LobbyCreateActivity</string>
    <string name="title_connection">Connection</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_add">+</string>
    <string name="hint_signup">You\'ll need to create a username, but you\'ll only have to do this once.</string>
    <string name="hint_email">cats@cats.com</string>
    <string name="hint_password">Password</string>
    <string name="hint_tos">By signing up you agree to the <a href="http://www.google.com">TOS</a> and <a href="http://www.google.com">Privacy policy</a> outlined in these links.</string>
    <string name="hint_join1"><b>Join in</b></string>
    <string name="hint_join2"><b>(This is so exciting, isn\'t it?)</b></string>
    <string name="hint_login"><b>Already registered? <a href="login">Login here.</a></b></string>
    <string name="hint_singup">We \'re still in alpha and would love to hear you feedback,\nso chat with us up when you get the chance.</string>
    <string name="hint_search_games">Search games</string>
    <string name="hint_description">Hey guys, I\'ll be heading out and over to checkout the area :) exited!</string>
    <string name="hint_game_name">Type your game name</string>
    <string name="hint_require_email">And an email, so you can access your account.</string>
    <string name="hint_username">unique username</string>

    <string name="label_select_preferred_system">SELECT PREFERRED SYSTEM</string>
    <string name="label_ps3">PS 3</string>
    <string name="label_ps4">PS 4</string>
    <string name="label_steam">STEAM</string>
    <string name="label_xbox_one">XBOX ONE</string>
    <string name="label_xbox_360">XBOX 360</string>
    <string name="label_pc">PC/STEAM</string>
    <string name="label_other">Other</string>
    <string name="label_pick_a_platform">PICK A SYSTEM</string>
    <string name="label_play_style">PLAY STYLE</string>
    <string name="label_gamer_skill">GAMER SKILL</string>
    <string name="label_date">When?</string>
    <string name="label_time">What Time?</string>
    <string name="label_description">DESCRIPTION</string>
    <string name="label_settings"><![CDATA[Profile & Settings]]></string>
    <string name="label_your_pup_name">Your PUP username</string>
    <string name="label_social_connection">Social Connection</string>
    <string name="label_invite">No one\'s here yet.\nWhy not invite some friends?</string>

    <string name="text_filter">Filter</string>
    <string name="text_create_lobby">Create Lobby</string>
    <string name="text_today">Today</string>
    <string name="text_tomorrow">Tomorrow</string>
    <string name="text_ok">Ok</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_register">Register for PUP</string>
    <string name="text_register_and_join"><![CDATA[Register & Join]]></string>
    <string name="text_members">Members</string>
    <string name="text_lobbies">Joined Games</string>
    <string name="text_send">Send</string>
    <string name="text_undo">Undo</string>
    <string name="text_user_name_info">We\'ll be adding integrations for additional systems</string>
    <string name="text_facebook">Facebook</string>
    <string name="text_twitter">Twitter</string>
    <string name="text_request_game">Not showing up? Request a Game.</string>
    <string name="text_connect">Connect</string>
    <string name="text_reddit">Reddit</string>
    <string name="text_tumblr">Tumblr</string>
    <string name="text_share">Share</string>
    <string name="text_share_to_reddit">Share to Reddit</string>
    <string name="text_leave">Leave</string>
    <string name="text_happening_soon">Happening Soon</string>
    <string name="text_later_this_week">Later this week</string>
    <string name="text_next_week">Next week</string>
    <string name="text_right_now">Right Now</string>
    <string name="text_tos"><a href="http://partyupplayer.com/tos.php">TOS Document</a></string>
    <string name="text_feedback"><a href="#">Feedback</a></string>

    <string name="message_create_lobby_wrong_chose_time">Hey! it is better to choose future time.</string>
    <string name="message_no_lobbies">We didn\'t find any lobbies, why not start one of your own. --></string>
    <string name="message_no_internet">Seems like you\'ve travelled back in time. There is no internet! Please return to the modern era to use PUP.</string>
    <string name="message_lobby_creating">Creating</string>
    <string name="message_error_title">Oops! There is something wrong</string>
    <string name="message_loading">Loading</string>
    <string name="message_processing">Processing</string>
    <string name="message_leave_room">You\'ve just left the chat room.</string>
    <string name="message_leave_room_owner">You cannot leave this chat because you are the owner.</string>
    <string name="message_connect_success">Connected</string>
    <string name="message_connect_failure">Connection Failure</string>
    <string name="message_disconnect_success">Disconnected</string>
    <string name="message_disconnect_failure">Disconnection Failure</string>
    <string name="message_operation_failed">Operation Failed!</string>
    <string name="message_no_connection">No Connection!</string>
    <string name="message_user_being_token">The email or user name is taken.</string>
    <string name="message_invalid_email_and_name">Invalid Email or User Name</string>

    <string name="time_in_minutes">in %d minutes</string>
    <string name="time_pm">PM</string>
    <string name="time_am">AM</string>
    <string name="text_join">Join</string>
    <string name="title_all_games">ALL GAMES</string>
    <string name="title_joined_game">JOINED GAMES</string>
    <string name="title_profile">PROFILE</string>
    <string name="title_notification">PuP Reminder</string>
    <string name="text_all_notifications">All</string>
    <string name="text_game_start">Game Starts</string>
    <string name="label_notifications">Notifications</string>

</resources>
