<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance"
            android:gravity="center"
            android:text="@string/signup_slogan"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_normal" />
        <EditText
            android:id="@+id/text_email"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            android:padding="@dimen/padding_half"
            android:background="@drawable/border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_half" />

        <EditText
            android:id="@+id/text_password"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:padding="@dimen/padding_half"
            android:background="@drawable/border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_half" />

        <CheckBox
            android:id="@+id/checkbox_tos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_tos"
            android:autoLink="web"
            android:linksClickable="true" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:gravity="center"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_above="@+id/hint_signup"
        android:text="@string/hint_login"/>

    <TextView
        android:id="@+id/hint_signup"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_2x"
        android:layout_above="@id/btn_join"
        android:text="@string/hint_singup"/>

    <LinearLayout
        android:id="@+id/btn_join"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:background="@color/pup_orange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:padding="@dimen/padding_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/hint_join1"/>
        <TextView
            android:gravity="center"
            android:paddingBottom="@dimen/padding_small"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_join2"/>
        </LinearLayout>
</RelativeLayout>
