<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_portrait"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="@dimen/margin_normal"
        android:scaleType="centerCrop"
        android:src="@drawable/default_portrait"/>

    <View
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/img_portrait"
        android:layout_alignStart="@+id/img_portrait"
        android:layout_alignTop="@+id/img_portrait"
        android:background="@drawable/border">
    </View>


    <ImageView
        android:id="@+id/img_camera"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignBottom="@+id/img_portrait"
        android:layout_alignLeft="@+id/img_portrait"
        android:layout_alignStart="@+id/img_portrait"
        android:layout_margin="@dimen/margin_half"
        android:src="@drawable/ico_camera_teal"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/img_portrait"
        android:layout_marginRight="@dimen/margin_normal"
        android:layout_toEndOf="@+id/img_portrait"
        android:layout_toRightOf="@+id/img_portrait"
        android:text="@string/hint_signup"
        android:textSize="@dimen/text12"/>

    <EditText
        android:id="@+id/text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/img_portrait"
        android:layout_marginRight="@dimen/margin_normal"
        android:layout_toEndOf="@+id/img_portrait"
        android:layout_toRightOf="@+id/img_portrait"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/hint_username"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/img_portrait"
        android:layout_alignStart="@+id/img_portrait"
        android:layout_below="@+id/img_portrait"
        android:layout_marginBottom="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"/>

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_email"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_normal"
        android:paddingRight="@dimen/padding_normal"
        android:weightSum="2"
        >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_half"
            android:layout_weight="1"
            android:background="@drawable/button_text"
            android:gravity="center_vertical|left"
            android:text="@string/text_cancel"/>

        <Button
            android:id="@+id/btn_join"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_half"
            android:layout_weight="1"
            android:background="@drawable/button_text"
            android:gravity="center_vertical|right"
            android:text="@string/text_register_and_join"
            android:textColor="@color/pup_teal"/>
    </LinearLayout>

    <View
        style="@style/horizontal_line_light"
        android:layout_below="@+id/text_email"/>

</RelativeLayout>