<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_sliding_panel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    app:umanoOverlay="true"
    app:umanoFadeColor="@android:color/transparent"
    app:umanoPanelHeight="0dp"
    app:umanoShadowHeight="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.swarmnyc.pup.ui.fragment.FragmentLobbyList">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/layout_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/list_lobby"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/pup_grey_bg"
                android:scrollbars="vertical" />
        </android.support.v4.widget.SwipeRefreshLayout>


        <RelativeLayout
            android:id="@+id/layout_empty_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_2x"
            android:visibility="gone">

            <ImageView
                android:id="@+id/img_pup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/pup_lg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_pup"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/margin_2x"
                android:layout_marginLeft="104dp"
                android:layout_marginRight="104dp"
                android:layout_marginTop="@dimen/margin_2x"
                android:gravity="center"
                android:text="@string/message_no_lobbies" />

        </RelativeLayout>

        <!--<ImageButton-->
        <!--android:id="@+id/btn_create_lobby"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:src="@drawable/ico_float_orange_add"-->
        <!--android:background="@android:color/transparent"-->
        <!--android:gravity="center"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_margin="@dimen/margin_2x"/>-->


    </RelativeLayout>

    <FrameLayout
        android:id="@+id/slidePanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical">

                <com.swarmnyc.pup.view.ClearableAutoCompleteView
                    android:id="@+id/txt_game_serach"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_normal"
                    android:hint="@string/hint_search_games"
                    android:lines="1"
                    android:maxLines="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:text="@string/label_select_preferred_system"
                    android:textColor="@color/pup_orange"
                    android:textSize="@dimen/text12" />

                <com.swarmnyc.pup.view.GamePlatformSelectView
                    android:id="@+id/platform_select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:allowMultiSelect="true">

                </com.swarmnyc.pup.view.GamePlatformSelectView>
            </LinearLayout>

            <ImageView
                android:id="@+id/img_top_drawer_handle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:src="@drawable/bar_full_pull" />
        </LinearLayout>
    </FrameLayout>

</com.sothree.slidinguppanel.SlidingUpPanelLayout>





